Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -541,24 +541,24 @@
                                             <div class="small">Various settings for Performance</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="payroll_payitems.html">Pay Items</a>
+                                        <div><a href="administrator_remuneration_payitems.html">Pay Items</a>
                                             <div class="small">Items to be calculated in salary</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="payroll_payslipitems.html">Payslip Items</a>
+                                        <div><a href="administrator_remuneration_payslipitems.html">Payslip Items</a>
                                             <div class="small">Items to be shown on payslip</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="payroll_payslips.html">Paysets</a>
-                                            <div class="small">Create paysets with pay items</div>
+                                        <div><a href="administrator_remuneration_paysets.html">Paysets</a>
+                                            <div class="small">Create pay sets with pay items</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="payroll_payslips.html">Payslips</a>
+                                        <div><a href="administrator_remuneration_payslips.html">Payslips</a>
                                             <div class="small">Create payslip with payslip items</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="payroll_payassignment.html">Payset/payslip assignment</a>
-                                            <div class="small">Assign payset and payslip to a person</div>
+                                        <div><a href="administrator_remuneration_payassignment.html">Payset/payslip assignment</a>
+                                            <div class="small">Assign pay set and payslip to a person</div>
                                         </div>
                                     </div>
                                 </div>
