--- a/netishr/administrator_remuneration_paysets.html
+++ b/netishr/administrator_remuneration_paysets.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR | Paysets </title>
+    <title>NetisHR | Pay Sets </title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -398,7 +398,7 @@
                                             <div class="panel-body">
 
 
-                                                <a href="payroll_paysets_new.html" class="btn btn-primary btn-xs">New payset</a>
+                                                <a href="administrator_remuneration_paysets_new.html" class="btn btn-primary btn-xs">New pay set</a>
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
@@ -418,7 +418,7 @@
                                                                 <tbody>
                                                                     <tr>
                                                                         <td>STD</td>
-                                                                        <td>Standard Payset</td>
+                                                                        <td>Standard Pay Set</td>
                                                                         <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
                                                                         <td>
                                                                             BS_W - Basic Salary, TLK_A - Tunjangan Luar Kota, L_A - Lembur, TKH_A - Tunjangan Kemahalan
@@ -437,7 +437,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td>FRL</td>
-                                                                        <td>Freelance Payset</td>
+                                                                        <td>Freelance Pay Set</td>
                                                                         <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
                                                                         <td>
 
@@ -493,7 +493,7 @@
                                                                 <tbody>
                                                                     <tr>
                                                                         <td>PRT</td>
-                                                                        <td>Part-timer payset</td>
+                                                                        <td>Part-timer pay set</td>
                                                                         <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
                                                                         <td>
                                                                             BS_W - Basic Salary, L_A - Lembur, TL_A - Tunjangan Lembur
@@ -501,7 +501,7 @@
                                                                         <td>
                                                                             <td class="text-right">
                                                                                 <div class="btn-group">
-                                                                                    <button class="btn-white btn btn-xs">Archive</button>
+                                                                                    <button class="btn-white btn btn-xs">Unarchive</button>
                                                                                 </div>
                                                                                 <div class="btn-group">
                                                                                     <button class="btn-white btn btn-xs">Delete</button>
