--- a/netishr/administrator_remuneration_paysets_new.html
+++ b/netishr/administrator_remuneration_paysets_new.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>NetisHR | Paysets</title>
+    <title>NetisHR | Pay Sets</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -393,7 +393,7 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <!-- Initially select first competency in first category -->
-                                        <label class="control-label" for="status">Select a pay item and cut-off date: </label>&nbsp;&nbsp;<a href="payroll_payitems.html" class="btn-primary btn-xs">Create new pay item</a>
+                                        <label class="control-label" for="status">Select a pay item and cut-off date: </label>&nbsp;&nbsp;<a href="administrator_remuneration_payitems.html" class="btn-primary btn-xs">Create new pay item</a>
 
                                         <div class="input-group">
                                             <select data-placeholder="Choose a pay item..." class="chosen-select input-sm form-control" tabindex="2">
