--- a/netishr/administrator_remuneration_payslips.html
+++ b/netishr/administrator_remuneration_payslips.html
@@ -401,11 +401,10 @@
                                             <div class="panel-body">
 
 
-                                                <a href="payroll_payslips_new.html" class="btn btn-primary btn-xs">New payslip</a>
+                                                <a href="administrator_remuneration_payslips_new.html" class="btn btn-primary btn-xs">New payslip</a>
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
-                                                        <!-- When "Select" button is clicked above, add the competency to the list below -->
                                                         <div class="table-responsive">
                                                             <table class="footable table table-stripped toggle-arrow-tiny">
                                                                 <thead>
@@ -475,12 +474,11 @@
 
                                             </div>
                                         </div>
-                                        <div id="tab-2" class="tab-pane active">
+                                        <div id="tab-2" class="tab-pane">
                                             <div class="panel-body">
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
-                                                        <!-- When "Select" button is clicked above, add the competency to the list below -->
                                                         <div class="table-responsive">
                                                             <table class="footable table table-stripped toggle-arrow-tiny">
                                                                 <thead>
@@ -488,42 +486,24 @@
                                                                         <th data-toggle="true">Code</th>
                                                                         <th data-toggle="true">Name</th>
                                                                         <th data-hide="all">Description</th>
-                                                                        <th data-hide="all">Pay item(s)</th>
+                                                                        <th data-hide="all">Payslip item(s)</th>
                                                                         <th></th>
 
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td>GP_I</td>
-                                                                        <td>Gaji Pokok</td>
-                                                                        <td>Etiam leo tellus, imperdiet ac rutrum eget, dapibus vel nulla. </td>
-                                                                        <td>
-                                                                            BS_W - Basic Salary, L_A - Lembur, TL_A - Tunjangan Lembur
-                                                                        </td>
-                                                                        <td>
-                                                                            <td class="text-right">
-                                                                                <div class="btn-group">
-                                                                                    <button class="btn-white btn btn-xs">Archive</button>
-                                                                                </div>
-                                                                                <div class="btn-group">
-                                                                                    <button class="btn-white btn btn-xs">Delete</button>
-                                                                                </div>
-
-                                                                            </td>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>TKOM_I</td>
-                                                                        <td>Tunjangan Komunikasi</td>
+                                                                        <td>TKOT</td>
+                                                                        <td>Tunjangan Transportasi</td>
                                                                         <td>Nullam vitae tristique mi. Aenean a metus ut metus convallis venenatis. Sed vehicula commodo molestie. Suspendisse consequat turpis at dui gravida hendrerit. </td>
                                                                         <td>
+
                                                                             BS_W - Basic Salary, THDR_A - Tunjangan Kehadiran, L_A - Lembur, TL_A - Tunjangan Lembur
                                                                         </td>
                                                                         <td>
                                                                             <td class="text-right">
                                                                                 <div class="btn-group">
-                                                                                    <button class="btn-white btn btn-xs">Archive</button>
+                                                                                    <button class="btn-white btn btn-xs">Unarchive</button>
                                                                                 </div>
 
                                                                                 <div class="btn-group">
