--- a/netishr/payroll_salary_entry.html
+++ b/netishr/payroll_salary_entry.html
@@ -473,8 +473,8 @@
                                                 <thead>
                                                     <tr>
                                                         <th data-toggle="true">Code</th>
-                                                        <th data-toggle="true">Payitem Type</th>
-                                                        <th data-toggle="true">Pay Item</th>
+                                                        <th data-toggle="true">Pay/tax Type</th>
+                                                        <th data-toggle="true">Pay/tax Sub-type</th>
                                                         <th data-toggle="true">Amount</th>
 
                                                     </tr>
