Updated NetisHR files

--- a/netishr/administrator_performance_evaluation.html
+++ b/netishr/administrator_performance_evaluation.html
@@ -32,6 +32,8 @@
     <!-- Chosen -->
     <script src="js/plugins/chosen/chosen.jquery.js"></script>
 
+    <!-- X-editable CDN styles -->
+    <link href="css/bootstrap-editable.css" rel="stylesheet" />
 
 </head>
 
@@ -449,7 +451,6 @@
 
                                                 <div class="row">
                                                     <div class="col-sm-12">
-                                                        <!-- When "Select" button is clicked above, add the competency to the list below -->
                                                         <div class="table-responsive">
                                                             <table class="footable table table-stripped toggle-arrow-tiny">
                                                                 <thead>
@@ -465,7 +466,7 @@
                                                                 <tbody>
                                                                     <tr>
                                                                         <td>1</td>
-                                                                        <td>P &lt; 75%</td>
+                                                                        <td>T &lt; 75</td>
                                                                         <td>1</td>
                                                                         <td>Tidak memenuhi sebagian besar dari Target</td>
                                                                         <td>
@@ -481,7 +482,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td>2</td>
-                                                                        <td>75 =&lt; P &lt; 85%</td>
+                                                                        <td>75 =&lt; T &lt; 85</td>
                                                                         <td>2</td>
                                                                         <td>Memenuhi sebagian besar Target</td>
                                                                         <td>
@@ -498,7 +499,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td>3</td>
-                                                                        <td>85 =&lt; P &lt; 95%</td>
+                                                                        <td>85 =&lt; T &lt; 95</td>
                                                                         <td>3</td>
                                                                         <td>Mendekati Target</td>
                                                                         <td>
@@ -515,7 +516,7 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td>4</td>
-                                                                        <td>95 =&lt; P &lt; 100%</td>
+                                                                        <td>95 =&lt; T </td>
                                                                         <td>4</td>
                                                                         <td>Sesuai Target</td>
                                                                         <td>
@@ -542,9 +543,9 @@
                                                             </table>
                                                         </div>
                                                     </div>
-                                                </div>Any: This matches any value of P and W
-                                                <br> P: Achievement (actual/target), in percentage
+                                                </div>T: Total of actual achievements each cycle
                                                 <br> W: Weight, in percentage
+                                                <br> Any: This matches any value of T and W
 
                                             </div>
 
@@ -594,7 +595,6 @@
 
                                                     <div class="row">
                                                         <div class="col-sm-12">
-                                                            <!-- When "Select" button is clicked above, add the competency to the list below -->
                                                             <div class="table-responsive">
                                                                 <table class="footable table table-stripped toggle-arrow-tiny">
                                                                     <thead>
@@ -639,7 +639,7 @@
                                                         </div>
                                                     </div>
                                                     Any: This matches any value of P, W and S
-                                                    <br> P: Achievement (actual/target), in percentage
+                                                    <br> T: Total of actual achievements each cycle
                                                     <br> W: Weight, in percentage
                                                     <br> S: Score
 
@@ -878,7 +878,7 @@
                                                         </div>
                                                     </div>
                                                     Any: This matches any value of P, W and S
-                                                    <br> P: Achievement (actual/target), in percentage
+                                                    <br> T: Total of actual achievements each cycle
                                                     <br> W: Weight, in percentage
                                                     <br> S: Score
 
