--- a/netishr/administrator_remuneration_paysets_new.html
+++ b/netishr/administrator_remuneration_paysets_new.html
@@ -401,86 +401,11 @@
                                                 <option value="2">Allowances - Transportation Allowance</option>
                                                 <option value="3">Deductions - Retirement Fund</option>
                                             </select>
-                                            <span class="input-group-btn"><select data-placeholder="Choose a cut-off date..." class="chosen-select input-sm form-control" tabindex="2">
-                                                            <option selected value="1">1</option>
-                                                            <option value="2">2</option>
-                                                            <option value="3">3</option>
-                                                            <option value="3">4</option>
-                                                            <option value="3">5</option>
-                                                            <option value="3">6</option>
-                                                            <option value="3">7</option>
-                                                            <option value="3">8</option>
-                                                            <option value="3">9</option>
-                                                            <option value="3">10</option>
-                                                            <option value="3">11</option>
-                                                            <option value="3">12</option>
-                                                            <option value="3">13</option>
-                                                            <option value="3">14</option>
-                                                            <option value="3">15</option>
-                                                            <option value="3">16</option>
-                                                            <option value="3">17</option>
-                                                            <option value="3">18</option>
-                                                            <option value="3">19</option>
-                                                            <option value="3">20</option>
-                                                            <option value="3">21</option>
-                                                            <option value="3">22</option>
-                                                            <option value="3">23</option>
-                                                            <option value="3">24</option>
-                                                            <option value="3">25</option>
-                                                            <option value="3">26</option>
-                                                            <option value="3">27</option>
-                                                            <option value="3">28</option>
-                                                            <option value="3">29</option>
-                                                            <option value="3">30</option>
-                                                            <option value="3">31</option>
-                                                        </select></span>
                                             <span class="input-group-btn">
-                                        <button type="button" class="btn btn-sm btn-white"> <i class="fa fa-plus"></i> Select</button>
+                                        <button type="button" class="btn btn-sm btn-white"> <i class="fa fa-plus"></i> Add</button>
                                 </span>
                                         </div>
 
-
-
-
-                                        <div>
-                                            <!-- When a competency is selected above, show its description below -->
-                                            <div>
-                                                <div class="table-responsive">
-                                                    <table class="table table-striped">
-                                                        <thead>
-                                                            <tr>
-                                                                <th>Code</th>
-                                                                <th>Name</th>
-                                                                <th>Pay Item Type</th>
-                                                                <th>Pay Component Type</th>
-                                                                <th>Description Value</th>
-                                                                <th>Reference Value</th>
-                                                                <th>Percentage Value</th>
-                                                                <th>Specific Value</th>
-                                                                <th>Max Multiplication Value</th>
-                                                                <th>Payroll Setting Name</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            <tr>
-                                                                <td>BS_W</td>
-                                                                <td>Basic Salary</td>
-                                                                <td>Wages</td>
-                                                                <td>Basic Salary</td>
-                                                                <td>General</td>
-                                                                <td>Manual Entry</td>
-                                                                <td>0.00</td>
-                                                                <td>0.00</td>
-                                                                <td>0.00</td>
-                                                                <td>None</td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </div>
-                                            </div>
-
-
-                                        </div>
 
                                     </div>
 
@@ -523,6 +448,9 @@
                                                     <td>
                                                         <td class="text-right">
                                                             <div class="btn-group">
+                                                                <button class="btn-white btn btn-xs">Archive</button>
+                                                            </div>
+                                                            <div class="btn-group">
                                                                 <button class="btn-white btn btn-xs">Remove</button>
                                                             </div>
                                                         </td>
@@ -539,9 +467,11 @@
                                                     <td>0.00</td>
                                                     <td>0.00</td>
                                                     <td>None</td>
-                                                    <td>None</td>
                                                     <td>
                                                         <td class="text-right">
+                                                            <div class="btn-group">
+                                                                <button class="btn-white btn btn-xs">Archive</button>
+                                                            </div>
                                                             <div class="btn-group">
                                                                 <button class="btn-white btn btn-xs">Remove</button>
                                                             </div>
@@ -551,7 +481,7 @@
                                             </tbody>
                                             <tfoot>
                                                 <tr>
-                                                    <td colspan="5">
+                                                    <td colspan="11">
                                                         <ul class="pagination pull-right"></ul>
                                                     </td>
                                                 </tr>
