--- a/netishr/index.html
+++ b/netishr/index.html
@@ -199,8 +199,25 @@
                                     <li>
                                         <a href="#">Benefits</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Business Trips</a>
+                                    <li><a href="#">Benefits<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="benefitsrequestsandapprovals.html">Requests and Approvals</a>
+                                            </li>
+                                            <li>
+                                                <a href="benefitssummary.html">Summary</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Business trips<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="bistripsrequestsandapprovals.html">Requests and Approvals</a>
+                                            </li>
+                                            <li>
+                                                <a href="bistripssummary.html">Summary</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </li>
