--- a/netishr/administrator_remuneration_payassignment.html
+++ b/netishr/administrator_remuneration_payassignment.html
@@ -32,6 +32,8 @@
     <!-- Chosen -->
     <script src="js/plugins/chosen/chosen.jquery.js"></script>
 
+    <link href="css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+
 
 </head>
 
@@ -396,179 +398,62 @@
                                     <div class="ibox-content">
 
 
-                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newjoblevel">Make new assignment</button>
-                                        <div class="modal" id="newjoblevel">
-                                            <div class="modal-dialog">
-                                                <div class="modal-content animated">
-                                                    <div class="modal-header">
-                                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                        <i class="fa fa-laptop modal-icon"></i>
-                                                        <h4 class="modal-title">New pay item</h4>
-                                                        <small class="font-bold">Please enter info for new pay item.</small>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        <div class="form-group">
-                                                            <div class="row">
-                                                                <label class="col-sm-2 control-label">Type: </label>
-                                                                <div class="col-sm-10">
-                                                                    <select data-placeholder="Choose a type..." class="chosen-select" tabindex="2">
-                                                                        <option value="1">General</option>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="row">
-                                                                <label class="col-sm-2 control-label">Name: </label>
-                                                                <div class="col-sm-10">
-                                                                    <input type="text" class="form-control">
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="row">
-                                                                <label class="col-sm-2 control-label">Pay/Tax Type: </label>
-                                                                <div class="col-sm-10">
-                                                                    <select data-placeholder="Choose a pay/tax type..." class="chosen-select" tabindex="2">
-                                                                        <option value="1" selected>Wages</option>
-                                                                        <option value="2">Allowances</option>
-                                                                        <option value="3">Deductions</option>
-                                                                        <option value="4">Tax</option>
-                                                                        <option value="5">Non-taxable allowances</option>
-                                                                        <option value="6">Post-tax deductions</option>
-                                                                        <option value="7">Employer Contributions</option>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="row">
-                                                                <!-- Show here items for Pay/tax type selectd above -->
-                                                                <label class="col-sm-2 control-label">Pay/Tax Subtype: </label>
-                                                                <div class="col-sm-10">
-                                                                    <select data-placeholder="Choose a type..." class="chosen-select" tabindex="2">
-                                                                        <option value="1" selected>Basic Salary</option>
-                                                                        <option value="2">Other Incomes</option>
-                                                                        <option value="3">Tantiem, Bonus, THR </option>
-                                                                        <option value="4">Received in kind imposed cuts PPh Article 21</option>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="row">
-                                                                <label class="col-sm-2 control-label">Code: </label>
-                                                                <div class="col-sm-10">
-                                                                    <input type="text" class="form-control">
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="row">
-                                                                <label class="col-sm-2 control-label">Description: </label>
-                                                                <div class="col-sm-10">
-                                                                    <input type="text" class="form-control">
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="row">
-                                                                <label class="col-sm-2 control-label">Pay Item Type: </label>
-                                                                <div class="col-sm-10">
-                                                                    <select data-placeholder="Choose a type..." class="chosen-select" tabindex="2">
-                                                                        <option value="1">Manual Entry</option>
-                                                                        <option value="2">Payroll Setting Value</option>
-                                                                        <option value="3">Percentage of Payroll Setting</option>
-                                                                        <option value="4">Percentage of Payroll Setting (Total Value Limited)</option>
-                                                                        <option selected="selected" value="5">Percentage of Basic Salary</option>
-                                                                        <option value="6">Percentage of Basic Salary (Total Value Limited)</option>
-                                                                        <option value="7">Specific Value</option>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="row">
-                                                                <label class="col-sm-2 control-label">Percentage: </label>
-                                                                <div class="col-sm-10">
-                                                                    <input type="text" class="form-control">
-                                                                </div>
-
-                                                                <label class="col-sm-2 control-label">Cutoff Applied: </label>
-                                                                <div class="col-sm-10">
-                                                                    <select data-placeholder="Choose a type..." class="chosen-select" tabindex="2">
-                                                                        <option value="1">Yes</option>
-                                                                        <option value="2">No</option>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-
-                                                        </div>
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                        <div class="panel-body">
+                                            <div class="col-sm-9">
+                                                <a href="administrator_remuneration_payassignment_new.html" class="btn-primary btn-xs">Make new assignment</a>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <div class="form-group" id="monthpicker">
+                                                    <label>
+                                                        Select month</label>:
+                                                    <div class="input-group date">
+                                                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                                        <input type="text" class="form-control" value="2016">
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
 
+                                        </div>
 
 
                                         <table class="footable table table-stripped toggle-arrow-tiny">
                                             <thead>
                                                 <tr>
-                                                    <th data-toggle="true">Code</th>
+                                                    <th data-toggle="true">ID</th>
                                                     <th data-toggle="true">Name</th>
-                                                    <th data-toggle="true">Pay/tax Type</th>
-                                                    <th data-toggle="true">Pay/tax Sub-type</th>
-                                                    <th data-hide="all">Description Value</th>
-                                                    <th data-hide="all">Reference Value</th>
-                                                    <th data-hide="all">Percentage Value</th>
-                                                    <th data-hide="all">Specific Value</th>
-                                                    <th data-hide="all">Max Multiplication Value</th>
-                                                    <th data-hide="all">Payroll Setting Name</th>
-                                                    <th data-hide="all">Cutoff Date</th>
+                                                    <th data-toggle="true">Pay set</th>
+                                                    <th data-toggle="true">Payslip</th>
                                                     <th></th>
 
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td>BS_W</td>
-                                                    <td>Basic Salary</td>
-                                                    <td>Wages</td>
-                                                    <td>Basic Salary</td>
-                                                    <td>General</td>
-                                                    <td>Manual Entry</td>
-                                                    <td>0.00</td>
-                                                    <td>0.00</td>
-                                                    <td>0.00</td>
-                                                    <td>None</td>
-                                                    <td>None</td>
+                                                    <td>20130101001</td>
+                                                    <td>Jono Karjono</td>
+                                                    <td>xx</td>
+                                                    <td>xx</td>
                                                     <td>
                                                         <td class="text-right">
                                                             <div class="btn-group">
-                                                                <button class="btn-white btn btn-xs">Archive</button>
+                                                                <button class="btn-white btn btn-xs">Edit</button>
                                                             </div>
                                                             <div class="btn-group">
                                                                 <button class="btn-white btn btn-xs">Delete</button>
                                                             </div>
-
                                                         </td>
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>THR_A</td>
-                                                    <td>THR</td>
-                                                    <td>Allowances</td>
-                                                    <td>Tantiem, Bonus, THR</td>
-                                                    <td>General</td>
-                                                    <td>Manual Entry</td>
-                                                    <td>0.00</td>
-                                                    <td>0.00</td>
-                                                    <td>0.00</td>
-                                                    <td>None</td>
-                                                    <td>None</td>
+                                                    <td>20130101002</td>
+                                                    <td>Tono Kartono</td>
+                                                    <td>yy</td>
+                                                    <td>yy</td>
                                                     <td>
                                                         <td class="text-right">
                                                             <div class="btn-group">
-                                                                <button class="btn-white btn btn-xs">Archive</button>
+                                                                <button class="btn-white btn btn-xs">Edit</button>
                                                             </div>
-
                                                             <div class="btn-group">
                                                                 <button class="btn-white btn btn-xs">Delete</button>
                                                             </div>
@@ -578,7 +463,7 @@
                                             </tbody>
                                             <tfoot>
                                                 <tr>
-                                                    <td colspan="5">
+                                                    <td colspan="6">
                                                         <ul class="pagination pull-right"></ul>
                                                     </td>
                                                 </tr>
@@ -1068,6 +953,9 @@
             <!-- Chosen -->
             <script src="js/plugins/chosen/chosen.jquery.js"></script>
 
+            <!-- Data picker -->
+            <script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
+
             <!-- Page-Level Scripts -->
             <script>
                 $(document).ready(function () {
@@ -1152,6 +1040,16 @@
                     $('#DataTables_Table_7_filter').hide();
                     $('#DataTables_Table_8_filter').hide();
 
+                    $('#monthpicker .input-group.date').datepicker({
+                        format: 'mm/yyyy',
+                        todayBtn: "linked",
+                        keyboardNavigation: false,
+                        forceParse: false,
+                        calendarWeeks: true,
+                        autoclose: true,
+                        viewMode: "months",
+                        minViewMode: "months"
+                    });
 
                 });
 
