--- a/netishr/administrator_remuneration_payslips_new.html
+++ b/netishr/administrator_remuneration_payslips_new.html
@@ -389,65 +389,55 @@
 
 
 
-                            <label class="control-label" for="status">Select payslip item type: </label>
-                            <div class="input-group">
-                                <select data-placeholder="Choose a subordinate..." class="chosen-select input-sm form-control" tabindex="2">
-                                    <!-- <Category> - <Code> - <CompetencyName> -->
-                                    <option selected value="1">Income</option>
-                                    <option value="2">Deduction</option>
-                                </select>
-                            </div>
-
 
                             <!-- Initially select first competency in first category -->
                             <label class="control-label" for="status">Select payslip item: </label>
 
                             <div class="input-group">
                                 <select data-placeholder="Choose a subordinate..." class="chosen-select input-sm form-control" tabindex="2">
-                                    <!-- <Category> - <Code> - <CompetencyName> -->
-                                    <option value="61">Tunjangan Transportasi</option>
-                                    <option value="62">Tunjangan Komunikasi</option>
-                                    <option value="63">Lembur</option>
-                                    <option value="68">Jamsostek Allowance</option>
-                                    <option value="80">JKK (0.24%)</option>
-                                    <option value="81">JKM (0.30%)</option>
-                                    <option value="83">JP</option>
-                                    <option value="85">THR</option>
-                                    <option value="96">Tunjangan Administrasi ATM</option>
-                                    <option value="98">Tunjangan Lembur</option>
-                                    <option value="99">Tunjangan Makan Lembur</option>
-                                    <option value="103">Tunjangan Premi Asuransi</option>
-                                    <option value="108">Tunjangan Premi Asuransi BUMIDA (0.24% * Upah)</option>
-                                    <option value="110">Tunjangan Jabatan</option>
-                                    <option value="111">Tunjangan DKB</option>
-                                    <option value="112">Tunjangan Keluarga</option>
-                                    <option value="113">Tunjangan Uang Makan</option>
-                                    <option value="114">Tunjangan Uang Transport</option>
-                                    <option value="115">Tunjangan Masuk Hari Libur</option>
-                                    <option value="116">Uang Harian Dinas</option>
-                                    <option value="118">Tunjangan BPJS Kesehatan</option>
-                                    <option value="123">Tunjangan Penyesuaian</option>
-                                    <option value="125">Uang Makan</option>
-                                    <option value="126">Uang Transport</option>
-                                    <option value="127">Tunjangan Kehadiran</option>
-                                    <option value="128">Tunjangan Klasifikasi</option>
-                                    <option value="129">Tunjangan Kemahalan</option>
-                                    <option value="130">Tunjangan Komunikasi</option>
-                                    <option value="131">Tunjangan On Call</option>
-                                    <option value="132">Tunjangan Luar Kota</option>
-                                    <option value="133">Tunjangan Kacamata</option>
-                                    <option value="134">Tunjangan Operasional</option>
-                                    <option value="135">Rapel</option>
-                                    <option value="136">Insentif</option>
-                                    <option value="137">Askes Inpatient / Out</option>
-                                    <option value="138">BPJS Kesehatan 5%</option>
-                                    <option value="139">BPJS Ketenagakerjaan (JKK) 0.89%</option>
-                                    <option value="140">BPJS Ketenagakerjaan (JKM) 0.30%</option>
-                                    <option value="141">BPJS Ketenagakerjaan (JP) 3%</option>
-                                    <option value="142">BPJS Ketenagakerjaan (JHT) 5.7%</option>
-                                    <option value="143">Bonus</option>
-                                    <option value="144">Pesangon</option>
-                                    <option value="146">BPJS Ketenagakerjaan (JHT)2%</option>
+                                    <option value="61">Income - Tunjangan Transportasi</option>
+                                    <option value="62">Income - Tunjangan Komunikasi</option>
+                                    <option value="63">Income - Lembur</option>
+                                    <option value="68">Income - Jamsostek Allowance</option>
+                                    <option value="80">Deduction - JKK (0.24%)</option>
+                                    <option value="81">Deduction - JKM (0.30%)</option>
+                                    <option value="83">Deduction - JP</option>
+                                    <option value="85">Income - THR</option>
+                                    <option value="96">Income - Tunjangan Administrasi ATM</option>
+                                    <option value="98">Income - Tunjangan Lembur</option>
+                                    <option value="99">Income - Tunjangan Makan Lembur</option>
+                                    <option value="103">Income - Tunjangan Premi Asuransi</option>
+                                    <option value="108">Income - Tunjangan Premi Asuransi BUMIDA (0.24% * Upah)</option>
+                                    <option value="110">Income - Tunjangan Jabatan</option>
+                                    <option value="111">Income - Tunjangan DKB</option>
+                                    <option value="112">Income - Tunjangan Keluarga</option>
+                                    <option value="113">Income - Tunjangan Uang Makan</option>
+                                    <option value="114">Income - Tunjangan Uang Transport</option>
+                                    <option value="115">Income - Tunjangan Masuk Hari Libur</option>
+                                    <option value="116">Income - Uang Harian Dinas</option>
+                                    <option value="118">Income - Tunjangan BPJS Kesehatan</option>
+                                    <option value="123">Income - Tunjangan Penyesuaian</option>
+                                    <option value="125">Income - Uang Makan</option>
+                                    <option value="126">Income - Uang Transport</option>
+                                    <option value="127">Income - Tunjangan Kehadiran</option>
+                                    <option value="128">Income - Tunjangan Klasifikasi</option>
+                                    <option value="129">Income - Tunjangan Kemahalan</option>
+                                    <option value="130">Income - Tunjangan Komunikasi</option>
+                                    <option value="131">Income - Tunjangan On Call</option>
+                                    <option value="132">Income - Tunjangan Luar Kota</option>
+                                    <option value="133">Income - Tunjangan Kacamata</option>
+                                    <option value="134">Income - Tunjangan Operasional</option>
+                                    <option value="135">Income - Rapel</option>
+                                    <option value="136">Income - Insentif</option>
+                                    <option value="137">Income - Askes Inpatient / Out</option>
+                                    <option value="138">Income - BPJS Kesehatan 5%</option>
+                                    <option value="139">Income - BPJS Ketenagakerjaan (JKK) 0.89%</option>
+                                    <option value="140">Income - BPJS Ketenagakerjaan (JKM) 0.30%</option>
+                                    <option value="141">Income - BPJS Ketenagakerjaan (JP) 3%</option>
+                                    <option value="142">Income - BPJS Ketenagakerjaan (JHT) 5.7%</option>
+                                    <option value="143">Income - Bonus</option>
+                                    <option value="144">Income - Pesangon</option>
+                                    <option value="146">Income - BPJS Ketenagakerjaan (JHT)2%</option>
 
                                 </select>
                                 <span class="input-group-btn">
@@ -465,15 +455,8 @@
                                         <tr>
                                             <th data-toggle="true">Code</th>
                                             <th data-toggle="true">Name</th>
-                                            <th data-toggle="true">Pay Item Type</th>
-                                            <th data-toggle="true">Pay Component Type</th>
-                                            <th data-hide="all">Description Value</th>
-                                            <th data-hide="all">Reference Value</th>
-                                            <th data-hide="all">Percentage Value</th>
-                                            <th data-hide="all">Specific Value</th>
-                                            <th data-hide="all">Max Multiplication Value</th>
-                                            <th data-hide="all">Payroll Setting Name</th>
-                                            <th data-hide="all">Cutoff Date</th>
+                                            <th data-toggle="true">Payslip Item Type</th>
+                                            <th data-hide="all">Pay items</th>
                                             <th></th>
 
                                         </tr>
@@ -482,15 +465,8 @@
                                         <tr>
                                             <td>BS_W</td>
                                             <td>Basic Salary</td>
-                                            <td>Wages</td>
-                                            <td>Basic Salary</td>
-                                            <td>General</td>
-                                            <td>Manual Entry</td>
-                                            <td>0.00</td>
-                                            <td>0.00</td>
-                                            <td>0.00</td>
-                                            <td>None</td>
-                                            <td>None</td>
+                                            <td>Income</td>
+                                            <td>THR, Basic Salary</td>
                                             <td>
                                                 <td class="text-right">
                                                     <div class="btn-group">
@@ -506,15 +482,8 @@
                                         <tr>
                                             <td>THR_A</td>
                                             <td>THR</td>
-                                            <td>Allowances</td>
-                                            <td>Tantiem, Bonus, THR</td>
-                                            <td>General</td>
-                                            <td>Manual Entry</td>
-                                            <td>0.00</td>
-                                            <td>0.00</td>
-                                            <td>0.00</td>
-                                            <td>None</td>
-                                            <td>None</td>
+                                            <td>Income</td>
+                                            <td>xxx, yyy, zzz</td>
                                             <td>
                                                 <td class="text-right">
                                                     <div class="btn-group">
@@ -530,7 +499,7 @@
                                     </tbody>
                                     <tfoot>
                                         <tr>
-                                            <td colspan="5">
+                                            <td colspan="12">
                                                 <ul class="pagination pull-right"></ul>
                                             </td>
                                         </tr>
